<resources>
    <string name="app_name">Longville RideShare Driver</string>
    <string name="title_activity_maps">Map</string>
    <string name="server_addr">https://apps.ericvillnow.com/rideshare</string>
    <dimen name="recycler_section_header_height">36dp</dimen>
    <string name="title_activity_driver_maps">Map</string>

    z
    <string name="pwd">Password</string>
    <string name="email">Email address</string>
    <string name="textView_connecting">Connecting ...</string>
    <string name="btn_arrived_pickUp">Arrived at pick up location</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_call">Call user</string>
    <string name="btn_confirm">Confirm pick up</string>
    <string name="btn_cancel">Cancel trip</string>
    <string name="btn_arrived_dropOff">Confirm drop off</string>
    <string name="start_ride">Start Ride</string>
    <string name="confirm">Confirm</string>
    <string name="about">Welcome to the Longville RideShare Driver (LRSD) application. This is a platform that you can use to help your community and give them ride on your free time.\n\n App version: 1.0.0</string>

</resources>
